EVA-126 Fix: Se corrige el texto del detalle para AIU

--- a/Proyectos/templates/Proyectos/Contrato/_modal_contrato_detalle.html
+++ b/Proyectos/templates/Proyectos/Contrato/_modal_contrato_detalle.html
@@ -133,12 +133,12 @@
                                     {% endif %}
                                     {% if contrato.porcentaje_a %}
                                     <small class="mt-0 mb-3 text-muted">
-                                        <b>Porcentaje de Imprevistos: </b>{{ contrato.porcentaje_a }}%
+                                        <b>Porcentaje de Imprevistos: </b>{{ contrato.porcentaje_i }}%
                                     </small>
                                     {% endif %}
                                     {% if contrato.porcentaje_a %}
                                     <small class="mt-0 mb-3 text-muted">
-                                        <b>Porcentaje de Utilidad: </b>{{ contrato.porcentaje_a }}%
+                                        <b>Porcentaje de Utilidad: </b>{{ contrato.porcentaje_u }}%
                                     </small>
                                     {% endif %}
                                     <small class="mt-0 mb-3 text-muted">
