EVA-127 Feat: Se edita la vista y el template del detalle de contrato para mostrar las garantías con amparos y adiciones.

--- a/Proyectos/templates/Proyectos/Contrato/_modal_contrato_detalle.html
+++ b/Proyectos/templates/Proyectos/Contrato/_modal_contrato_detalle.html
@@ -161,6 +161,8 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="col-lg-12">
                     <div class="card mb-g">
                         <div class="row row-grid no-gutters">
                             <div class="col-12">
@@ -173,18 +175,46 @@
                             <div class="p-3">
                                 <h5>
                                     <small class="mt-0 mb-3 text-muted">
-                                        <b>Garantías: </b>
-                                        {% for gar in garantias %}
-                                            <br><b>Tipo: </b>{{ gar.tipo_garantia }}
-                                            {% if gar.tipo_garantia.aplica_valor_smmlv %}
-                                                <br><b>Valor Asegurado: </b> ${{ gar.porcentaje_asegurado }}
-                                            {% else %}
-                                                <br><b>Porcentaje Asegurado: </b>{{ gar.porcentaje_asegurado }}%
-                                            {% endif %}
-                                            <br><b>Vigencia: </b>{{ gar.vigencia }} Meses
-                                            <br><b>Extensiva: </b>{% if gar.extensiva %}Si{% else %}No{% endif %}
-                                            <br>
-                                        {% endfor %}
+                                        <div class="row">
+                                            {% for gar in garantias %}
+                                                <div class="col-lg-6">
+                                                <br><b>Garantía: </b>
+                                                <br><b>Tipo: </b>{{ gar.tipo_garantia }}
+                                                {% if gar.tipo_garantia.aplica_valor_smmlv %}
+                                                    <br><b>Valor SMMLV: </b> {{ gar.porcentaje_asegurado }}
+                                                {% else %}
+                                                    <br><b>Porcentaje Asegurado: </b>{{ gar.porcentaje_asegurado }}%
+                                                {% endif %}
+                                                {% if not gar.tipo_garantia.aplica_amparos_adiciones %}
+                                                    <br><b>Vigencia: </b>{{ gar.vigencia }} Meses
+                                                {% else %}
+                                                    <br><b>Vigencia: </b>Plazo de ejecución del contrato.
+                                                {% endif %}
+                                                <br><b>Extensiva: </b>{% if gar.extensiva %}Si{% else %}No{% endif %}
+                                                </div>
+                                                {% if not gar.tipo_garantia.aplica_amparos_adiciones %}
+                                                    <div class="col-lg-6"></div>
+                                                {% else %}
+                                                    <div class="col-lg-6">
+                                                        {% for ad_am in adiciones_amparos %}
+                                                            {% if ad_am.garantia == gar %}
+                                                                <br>
+                                                                {% if ad_am.adicion %}
+                                                                    <br><b>Adición y Límite Asegurado: </b>
+                                                                    <br><b>Adición: </b>{{ ad_am.adicion }}
+                                                                {% else %}
+                                                                    <br><b>Amparo y Límite Asegurado: </b>
+                                                                    <br><b>Amparo: </b>{{ ad_am.amparo }}
+                                                                {% endif %}
+                                                                <br><b>Límite Asegurado: </b>{{ ad_am.limite_asegurado }}
+                                                                <br>
+                                                            {% endif %}
+                                                        {% endfor %}
+                                                    </div>
+                                                {% endif %}
+                                                <br>
+                                            {% endfor %}
+                                        </div>
                                     </small>
                                 </h5>
                             </div>
