EVA-127 Feat: Se corrige el texto de Contra Entrega en donde aplica.

--- a/Proyectos/templates/Proyectos/Contrato/_modal_contrato_detalle.html
+++ b/Proyectos/templates/Proyectos/Contrato/_modal_contrato_detalle.html
@@ -146,7 +146,7 @@
                                         {% if forma_pago.anticipo %}<br>- <b>Anticipo: </b>{{ forma_pago.anticipo }}%{% endif %}
                                         {% if forma_pago.actas_parciales %}<br>- <b>Actas Parciales: </b>{{ forma_pago.actas_parciales }}%{% endif %}
                                         {% if forma_pago.liquidacion %}<br>- <b>Liquidación: </b>{{ forma_pago.liquidacion }}%{% endif %}
-                                        {% if forma_pago.forma_pago == 0 %}<br>- <b>Satisfacción y Contraentrega: </b> 100%{% endif %}
+                                        {% if forma_pago.forma_pago == 0 %}<br>- <b>Contra Entrega y Satisfacción: </b> 100%{% endif %}
                                     </small>
                                     <small class="mt-0 mb-3 text-muted">
                                         <b>Vigencias: </b>
