--- a/Proyectos/templates/Proyectos/Contrato/crear-editar.html
+++ b/Proyectos/templates/Proyectos/Contrato/crear-editar.html
@@ -152,7 +152,7 @@
 
                                                             <div class="form-row">
                                                                 <div class="form-group col-md-6">
-                                                                    {% select_tag formas_de_pago 'forma_de_pago_id' 'Contraentrega y Satisfacción' primer_valor=True texto_label="Forma de Pago" required="" value=formas_pago.forma_pago  mensaje_validacion='Por favor seleccione una forma de pago' invalido=errores.forma_de_pago %}
+                                                                    {% select_tag formas_de_pago 'forma_de_pago_id' 'Contra Entrega y Satisfacción' primer_valor=True texto_label="Forma de Pago" required="" value=formas_pago.forma_pago  mensaje_validacion='Por favor seleccione una forma de pago' invalido=errores.forma_de_pago %}
                                                                 </div>
                                                                 <div class="form-group col-md-6" id="aplica_porcentaje_valor">
                                                                     <div class="form-row">
