--- a/Proyectos/templates/Proyectos/Contrato/_modal_garantia_amparos.html
+++ b/Proyectos/templates/Proyectos/Contrato/_modal_garantia_amparos.html
@@ -1,12 +1,12 @@
 {% load static %}
 {% load eva_tags %}
-<form id="form_adicion_amparo" novalidate>
-    <div class="modal fade"  tabindex="-1" id="agregar_adicion_amparo" role="dialog" aria-hidden="true">
+<form id="form_amparo" novalidate>
+    <div class="modal fade"  tabindex="-1" id="agregar_amparo_modal" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header p-b-0">
                     <h4 class="modal-title">
-                        Adiciones y Amparos
+                        Amparos
                     </h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true"><i class="fal fa-times"></i></span>
@@ -18,7 +18,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger btn-pills" data-dismiss="modal">Cancelar</button>
-                    <button type="submit" class="btn btn-primary btn-pills guardarAdicionAmparo">Guardar</button>
+                    <button type="submit" class="btn btn-primary btn-pills guardarAmparo">Guardar</button>
                 </div>
             </div>
         </div>
