--- a/Proyectos/templates/Proyectos/Contrato/crear-editar.html
+++ b/Proyectos/templates/Proyectos/Contrato/crear-editar.html
@@ -77,7 +77,7 @@
                                                                     {% input_number_tag 'plazo_ejecucion' 'Plazo de Ejecución (Meses)' placeholder="Ingrese el plazo de ejecución"  min='0' max="2147483647" onInput="validarLongitud(10,this)" required="" value=contrato.plazo_ejecucion mensaje_validacion='Por favor ingrese el plazo de ejecución' invalido=errores.plazo_ejecución %}
                                                                 </div>
                                                                 <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-6">
-                                                                    {% input_currency_tag 'valor' 'Valor' removeMaskOnSubmit=True placeholder="Ingrese el valor"  min='0' max="99999999999999.99" step="0.01" onInput="validarLongitud(22,this)" required="" value=valor_contrato mensaje_validacion='Por favor ingrese el valor' invalido=errores.valor %}
+                                                                    {% input_currency_tag 'valor' 'Valor' removeMaskOnSubmit=True placeholder="Ingrese el valor"  min='0' max="99999999999999.99" step="0.01" required="" value=valor_contrato mensaje_validacion='Por favor ingrese el valor' invalido=errores.valor %}
                                                                 </div>
 
                                                                 <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-6">
@@ -131,10 +131,10 @@
 
                                                             <div class="form-row">
                                                                 <div class="form-group col-md-6">
-                                                                    {% input_currency_tag 'valor_con_iva' 'Valor con IVA' removeMaskOnSubmit=True placeholder="Ingrese el valor con IVA"  min='0' max="99999999999999.99" step="0.01" onInput="validarLongitud(22,this)" required="" value=valor_contrato_con_iva mensaje_validacion='Por favor ingrese el valor con IVA' invalido=errores.valor_con_iva %}
+                                                                    {% input_currency_tag 'valor_con_iva' 'Valor con IVA' removeMaskOnSubmit=True placeholder="Ingrese el valor con IVA"  min='0' max="99999999999999.99" step="0.01" required="" value=valor_contrato_con_iva mensaje_validacion='Por favor ingrese el valor con IVA' invalido=errores.valor_con_iva %}
                                                                 </div>
                                                                 <div class="form-group col-md-6">
-                                                                    {% input_currency_tag 'valor_sin_iva' 'Valor sin IVA' removeMaskOnSubmit=True placeholder="Ingrese el valor sin IVA"  min='0' max="99999999999999.99" step="0.01" onInput="validarLongitud(22,this)" required="" value=valor_contrato_sin_iva mensaje_validacion='Por favor ingrese el valor sin IVA' invalido=errores.valor_sin_iva %}
+                                                                    {% input_currency_tag 'valor_sin_iva' 'Valor sin IVA' removeMaskOnSubmit=True placeholder="Ingrese el valor sin IVA"  min='0' max="99999999999999.99" step="0.01" required="" value=valor_contrato_sin_iva mensaje_validacion='Por favor ingrese el valor sin IVA' invalido=errores.valor_sin_iva %}
                                                                 </div>
                                                             </div>
 
@@ -205,7 +205,7 @@
                                                                         {% input_number_tag 'anho_vigencia' 'Año' placeholder="Ingrese el año de vigencia" min='2000' max="4000" onInput="validarLongitud(4,this)" required="" value=contrato.acta_parcial mensaje_validacion='Por favor ingrese el año (Mínimo año: 2000)' %}
                                                                     </div>
                                                                     <div class="form-group col-md-5">
-                                                                        {% input_currency_tag 'valor_vigencia' "Valor" placeholder="Ingrese el valor de vigencia" required="" min="0.01" max="99999999999999.99" step="0.01" onInput="validarLongitud(22,this)" removeMaskOnSubmit=True %}
+                                                                        {% input_currency_tag 'valor_vigencia' "Valor" placeholder="Ingrese el valor de vigencia" required="" min="0.01" max="99999999999999.99" step="0.01" removeMaskOnSubmit=True %}
                                                                     </div>
                                                                     <div class="col-md-1" style="padding-top:30px">
                                                                         <a class="far fa-2x far fa-plus-circle" id="agregar_vigencia" href="#" onclick="agregarVigencia()" title="" data-original-title="Agregar Vigencia" style=""></a>
