EVA-129 Feat: Se modifica el botón de "Volver atrás" del formulario de recuperar contraseña Para que cuando se abra desde el inicio de sesión de proveedores o colaboradores, siempre vuelva al que corresponde.

--- a/Administracion/templates/Administracion/Autenticacion/olvido_contrasena.html
+++ b/Administracion/templates/Administracion/Autenticacion/olvido_contrasena.html
@@ -34,7 +34,7 @@
                             </div>
                             <div class="row no-gutters" style="justify-content: center">
                                 <div class="col-lg-8 pl-lg-1 my-2" >
-                                    <a href="{% url 'Administracion:iniciar-sesion'  %}"  class="btn btn-outline-default btn-block btn-xs"><small class="fw-300 mt-3 mb-5 opacity-90">Volver</small></a>
+                                    <a href="javascript:history.back()"  class="btn btn-outline-default btn-block btn-xs"><small class="fw-300 mt-3 mb-5 opacity-90">Volver</small></a>
                                 </div>
                             </div>
                         </form>
