--- a/EVA/templates/EVA/_common/header.html
+++ b/EVA/templates/EVA/_common/header.html
@@ -5,7 +5,7 @@
     <div class="page-logo">
         <a href="#" class="page-logo-link press-scale-down d-flex align-items-center position-relative" data-toggle="modal" data-target="#modal-shortcut">
             <img src="{% static 'EVA/Plantilla/img/logo.png' %}" alt="EVA" aria-roledescription="logo">
-            <span class="page-logo-text mr-1">EVA</span>
+            <span class="page-logo-text mr-1">{% if request.session.colaborador %}EVA{{ request.session.colaborador }}{% else %}Proveedores{% endif %}</span>
             <span class="position-absolute text-white opacity-50 small pos-top pos-right mr-2 mt-n2"></span>
             <i class="fal fa-angle-down d-inline-block ml-1 fs-lg color-primary-300"></i>
         </a>
@@ -29,9 +29,15 @@
             </li>
         </ul>
     </div>
+    {% if request.session.colaborador %}
     <div class="hidden-md-down dropdown-icon-menu position-relative">
-        <img class="seleccionEmpresaGlobal logo-nav" src="{{ request.session.empresa.logo }}"  data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="{{ request.session.empresa.nombre}}">
+        <img class="seleccionEmpresaGlobal logo-nav" src="{{ request.session.empresa.logo }}"  data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="{{ request.session.empresa.nombre }}">
     </div>
+    {% else %}
+        <div class="hidden-md-down dropdown-icon-menu position-relative">
+            <img class="seleccionEmpresaGlobal logo-nav" src="{{ request.session.proveedor_empresa.logo }}"  data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip">
+        </div>
+    {% endif %}
 
     <!-- DOC: mobile button appears during mobile width -->
     <div class="hidden-lg-up">
@@ -87,9 +93,11 @@
                                 <ul class="notification" style="overflow: hidden; width: auto; height: 100%;">
                                     <li>
                                         <div class="d-flex align-items-center ">
+                                            {% if request.session.colaborador %}
                                             <span class="d-flex flex-column flex-1">
                                                 <a class="dropdown-item" href="{% url 'Notificaciones:notificaciones-seleccion-email' request.user.id %}"><strong style="size: 20px">Seleccionar notificaciones por correo</strong></a>
                                             </span>
+                                            {% endif %}
                                         </div>
                                     </li>
                                 </ul>
@@ -105,20 +113,25 @@
         <!-- app user menu -->
         <div>
             <a href="#" data-toggle="dropdown" title="Usuario" class="header-icon d-flex align-items-center justify-content-center ml-2">
-                <img src="{{ request.session.colaborador }}" class="profile-image rounded-circle" alt="Nombre Usuario">
+                <img src="{% if request.session.colaborador %}{{ request.session.colaborador }}{% else%}{% static 'EVA/Plantilla/img/profile.png' %}{% endif %}" class="profile-image rounded-circle" alt="Nombre Usuario">
                 <!-- you can also add username next to the avatar with the codes below:-->
-                <span class="ml-1 mr-1 text-truncate text-truncate-header hidden-xs-down">{{ request.user.username }}</span>
+                <span class="ml-1 mr-1 text-truncate text-truncate-header hidden-xs-down">{% if request.session.colaborador %}{{ request.user.username }}{% else %}{{ request.session.proveedor_nombre }}{% endif %}</span>
                 <i class="ni ni-chevron-down hidden-xs-down"></i>
             </a>
             <div class="dropdown-menu dropdown-menu-animated dropdown-lg">
                 <div class="dropdown-header bg-trans-gradient d-flex flex-row py-4 rounded-top">
                     <div class="d-flex flex-row align-items-center mt-1 mb-1 color-white">
                         <span class="mr-2">
-                            <img src="{{ request.session.colaborador }}" class="rounded-circle profile-image" alt="Nombre  Usuario">
+                            <img src="{% if request.session.colaborador %}{{ request.session.colaborador }}{% else%}{% static 'EVA/Plantilla/img/profile.png' %}{% endif %}" class="rounded-circle profile-image" alt="Nombre  Usuario">
                         </span>
                         <div class="info-card-text">
-                            <div id="identificacion_us" class="fs-lg text-truncate text-truncate-lg"><a style="color: white" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver perfil" href="{% url 'TalentoHumano:colaboradores-perfil' request.session.colaborador_id %}"> {{ request.user.first_name.split | first }}{{ ' ' }}{{ request.user.last_name.split | first }}</a></div>
-                            <span class="text-truncate text-truncate-md opacity-80">{{ request.user.username }}</span>
+                            {% if request.session.colaborador %}
+                                <div id="identificacion_us" class="fs-lg text-truncate text-truncate-lg"><a style="color: white" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title="" data-original-title="Ver perfil" href="{% url 'TalentoHumano:colaboradores-perfil' request.session.colaborador_id %}"> {{ request.user.first_name.split | first }}{{ ' ' }}{{ request.user.last_name.split | first }}</a></div>
+                                <span class="text-truncate text-truncate-md opacity-80">{{ request.user.username }}</span>
+                            {% else %}
+                                <div id="identificacion_us" class="fs-lg text-truncate text-truncate-lg"><a style="color: white" data-template='<div class="tooltip" role="tooltip"><div class="tooltip-inner bg-primary-500"></div></div>' data-toggle="tooltip" title=""> {{ request.session.proveedor_nombre }}</a></div>
+                                <span class="text-truncate text-truncate-md opacity-80">{{ request.session.proveedor_correo }}</span>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
@@ -131,7 +144,6 @@
                 <div class="dropdown-divider m-0"></div>
                 <a class="dropdown-item fw-500 pt-3 pb-3" href="{% url 'administracion:cerrar-sesion' %}">
                     <span data-i18n="drpdwn.page-logout">Cerrar Sesión</span>
-                    <span class="float-right fw-n">{{ request.user.username }}</span>
                 </a>
             </div>
         </div>
