EVA-129 Feat: Se agrega formato y el texto real a la política de cofidencialidad

--- a/Administracion/templates/Administracion/Tercero/Proveedor/politica_cofidencialidad.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/politica_cofidencialidad.html
@@ -6,8 +6,8 @@
 
 {% block main %}
     <div class="flex-1" style="background: url('{% static 'EVA/Plantilla/img/svg/pattern-1.svg' %}') no-repeat center bottom fixed; background-size: cover ">
-        <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0 w-50">
-            <div style="position: fixed; top: 45%; left: 50%; width: 500px; height: auto; -webkit-transform: translate(-50%,-50%); transform: translate(-50%,-50%);">
+        <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0">
+            <div style="justify-content: center;">
                 <div class="page-logo m-0 w-100 align-items-center justify-content-center rounded border-bottom-left-radius-0 border-bottom-right-radius-0 px-4">
                     <a href="javascript:void(0)" class="page-logo-link press-scale-down d-flex align-items-center">
                         <img src="{% static 'EVA/Plantilla/img/logo.png' %}" alt="EVA" aria-roledescription="logo">
@@ -16,8 +16,35 @@
                     </a>
                 </div>
                 <div class="card p-4 border-top-left-radius-0 border-top-right-radius-0">
-                    <h3>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum dicta dolore, explicabo illo ipsam nesciunt odio repellat tenetur voluptates! At dolor dolores ipsa, laboriosam quidem quos ratione similique tempora ut!
+                    <h1 style="text-align: center"><b>POLÍTICA PARA LA PROTECCION DE DATOS PERSONALES</b></h1>
+                    <h3 style="text-align: justify">
+                        La presente política tiene como propósito dar cumplimiento a lo establecido en la Ley 1266 de
+                        2008 y la Ley 1581 de 2012, su decreto reglamentario 1377 de 2013 y demás normas concordantes
+                        que regulan el derecho constitucional al HABEAS DATA, contemplado en el artículo 15 de la
+                        Constitución Política de Colombia, cuyo propósito es garantizar a los ciudadanos el derecho a
+                        autorizar el tratamiento de sus datos personales, así como a conocer, actualizar y rectificar
+                        las informaciones que se hayan recogido sobre ellos en las bases de datos o en archivos de
+                        entidades públicas y privadas. La Ley 1266 o Ley de Habeas Data, desarrolló el precepto
+                        constitucional del artículo 15, regulando el uso de la información de los datos personales
+                        financieros, crediticios, comerciales y de servicios registrados en un banco de datos.<br><br>
+
+                        Las presentes políticas y procedimientos aplican a todo dato personal registrado presencial o
+                        virtualmente, directamente o a través de terceros, en las bases de datos de ARIOS INGENIERIA
+                        S.A.S. y las empresas o entidades que hacen parte de su organización, con las excepciones que
+                        establece la ley, para su tratamiento (recolección, almacenamiento, uso, circulación o
+                        supresión), para que el titular del dato acceda o pueda acceder a cualquier producto, servicio,
+                        oferta, promoción, beneficio y/o vinculación soportada en una relación jurídica con ARIOS
+                        INGENIERIA S.A.S.<br><br>
+
+                        ARIOS INGENIERIA S.A.S. Comunicara a todos los colaboradores que manejen información de datos
+                        personales de clientes internos y externos, proveedores y otras partes interesadas, sobre su
+                        responsabilidad en el tratamiento de estos y concientizarlos sobre los principios de privacidad
+                        de acuerdo con la legislación y reglamentación vigente.<br><br>
+
+                        ARIOS INGENIERIA S.A.S. Informará a los colaboradores, clientes internos y externos, proveedores
+                        y otras partes interesadas que sus datos de carácter personal sólo serán utilizados cuando sea
+                        adecuado y pertinente en relación con el ámbito y las finalidades determinadas, explícitas y
+                        legítimas para las que se hayan obtenido.
                     </h3>
                     <br>
                     <br>
