--- a/Administracion/templates/Administracion/Tercero/Proveedor/registro.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/registro.html
@@ -17,8 +17,8 @@
 
 {% block main %}
     <div class="flex-1" style="background: url('{% static 'EVA/Plantilla/img/svg/pattern-1.svg' %}') no-repeat center bottom fixed; background-size: cover ">
-        <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0 w-50">
-            <div style="position: fixed; top: 45%; left: 50%; width: 500px; height: auto; -webkit-transform: translate(-50%,-50%); transform: translate(-50%,-50%);">
+        <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0" style="width: 40%; !important;">
+            <div style="justify-content: center;">
                 <div class="page-logo m-0 w-100 align-items-center justify-content-center rounded border-bottom-left-radius-0 border-bottom-right-radius-0 px-4">
                     <a href="javascript:void(0)" class="page-logo-link press-scale-down d-flex align-items-center">
                         <img src="{% static 'EVA/Plantilla/img/logo.png' %}" alt="EVA" aria-roledescription="logo">
@@ -33,16 +33,16 @@
                             <div class="form-group col-xl-12 col-lg-12 col-md-12 col-sm-12">
                                 {% input_text_tag 'nombre' 'Nombre o Razón Social' placeholder="Ingrese el nombre o razón social" value=datos.nombre required="" maxlength="100" mensaje_validacion='Por favor digite el nombre' invalido=errores.nombre %}
                             </div>
-                            <div class="form-group col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                            <div class="form-group col-xl-6 col-lg-6 col-md-12 col-sm-12">
                                {% select_tag tipo_identificacion 'tipo_identificacion' 'Seleccione un tipo de identificación' texto_label="Tipo de Identificación" value=datos.tipo_identificacion_id required="" mensaje_validacion='Por favor seleccione un país' invalido=errores.tipo_identificacion %}
                             </div>
-                            <div class="form-group col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                            <div class="form-group col-xl-6 col-lg-6 col-md-12 col-sm-12">
                                 {% input_text_tag 'identificacion' 'Número de Identificación' placeholder="Ingrese un número" value=datos.identificacion required="" maxlength="20" mensaje_validacion='Por favor digite un número' invalido=errores.identificacion mensaje_invalido=errores.identificacion %}
                             </div>
-                            <div class="form-group col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                            <div class="form-group col-xl-6 col-lg-6 col-md-12 col-sm-12">
                                 {% input_email_tag 'correo' 'Correo electrónico' placeholder="Ingrese el correo electrónico" value=datos.correo_principal required="" maxlength="100" mensaje_validacion='Por favor digite el correo electrónico' invalido=errores.correo  %}
                             </div>
-                            <div class="form-group col-xl-6 col-lg-6 col-md-6 col-sm-6">
+                            <div class="form-group col-xl-6 col-lg-6 col-md-12 col-sm-12">
                                 {% input_text_tag 'celular' 'Celular' placeholder="Ingrese el número de celular" value=datos.telefono_movil_principal required="" maxlength="30" mensaje_validacion='Por favor digite un número' invalido=errores.celular %}
                             </div>
                             <div class="form-group col-xl-12 col-lg-12 col-md-12 col-sm-12">
