--- a/Administracion/templates/Administracion/Autenticacion/iniciar-sesion.html
+++ b/Administracion/templates/Administracion/Autenticacion/iniciar-sesion.html
@@ -40,10 +40,15 @@
                                 <input type="password" id="password" name="password" class="form-control" placeholder="Digite su contraseña"  required style="font-size: 0.8125rem;">
                                 <div class="invalid-feedback">Por favor digite su contraseña</div>
                             </div>
-                            <div class="form-group text-left">
-                                <a href="{% url 'Administracion:olvido-contrasena' %}" >
-                                    ¿Olvidó su contraseña?
-                                </a>
+                            <div class="form-group text-left" style="align-items: center">
+                                <div class="row">
+                                     <div class="col-lg-6">
+                                         <a href="{% url 'Administracion:olvido-contrasena' %}">¿Olvidó su contraseña?</a>
+                                     </div>
+                                    <div class="col-lg-6">
+                                        <a href="{% url 'Administracion:proveedor-iniciar-sesion' %}">¿Desea iniciar sesión como proveedor?</a>
+                                    </div>
+                                </div>
                             </div>
                             <input id="datos_token" name="datos" hidden value="{{ datos }}">
                             <div class="row no-gutters">
