EVA-129 Feat: Se realizan modificaciones en el inicio de sesión de proveedores

--- a/Administracion/templates/Administracion/Tercero/Proveedor/inicio-sesion.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/inicio-sesion.html
@@ -14,11 +14,8 @@
         <div class="container py-4 py-lg-5 my-lg-5 px-4 px-sm-0 w-50">
             <div style="position: fixed; top: 45%; left: 50%; width: 320px; height: auto; -webkit-transform: translate(-50%,-50%); transform: translate(-50%,-50%);">
                 <div class="page-logo m-0 w-100 align-items-center justify-content-center rounded border-bottom-left-radius-0 border-bottom-right-radius-0 px-4">
-                    <a href="javascript:void(0)" class="page-logo-link press-scale-down d-flex align-items-center">
-                        <img src="{% static 'EVA/Plantilla/img/logo.png' %}" alt="EVA" aria-roledescription="logo">
-                        <span class="page-logo-text mr-1">Proveedores</span>
-                        <i class="fal fa-angle-down d-inline-block ml-1 fs-lg color-primary-300"></i>
-                    </a>
+                    <img src="{% static 'EVA/Plantilla/img/logo.png' %}" alt="EVA" aria-roledescription="logo">
+                    <span class="page-logo-text mr-1">EVA - Proveedores</span>
                 </div>
                 <div class="card p-4 border-top-left-radius-0 border-top-right-radius-0">
                     <form action="{% url 'Administracion:proveedor-iniciar-sesion' %}" id="iniciar-sesion-proveedor-form" method="post" class="needs-validation" novalidate>
