EVA-135 feat: se agrega soporte en la amortización de la factura a los campos de Id motización y fecha de amortización.
Estos son necesarios al momento de reportar en la facturación electrónica.

--- a/Financiero/templates/Financiero/Facturacion/crear_factura.html
+++ b/Financiero/templates/Financiero/Facturacion/crear_factura.html
@@ -6,6 +6,7 @@
 {% block styles %}
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/datagrid/datatables/datatables.bundle.css' %}">
 	<link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/select2/select2.bundle.css' %}">
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/bootstrap-datepicker/bootstrap-datepicker.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
 {% endblock styles%}
 
@@ -126,6 +127,7 @@
     <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/formplugins/inputmask/inputmask.bundle.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/inputmask.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/formplugins/bootstrap-datepicker/bootstrap-datepicker.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/conversiones.js' %}"></script>
     <script src="{% static 'Financiero/js/Facturacion/formFactura.js' %}"></script>
 {% endblock scripts%}
