--- a/Financiero/templates/Financiero/Facturacion/_agregar_amortizacion_modal.html
+++ b/Financiero/templates/Financiero/Facturacion/_agregar_amortizacion_modal.html
@@ -15,6 +15,16 @@
                 <div class="modal-body">
                     <div class="form-row">
                         <div class="form-group col-12">
+                            {% input_text_tag 'id_amortizacion' "ID de la amortización:" placeholder="Ingrese el ID" maxlength="250" required="" %}
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-12">
+                            {% input_date_tag 'fecha_amortizacion' "Fecha de la amortización:" required="" %}
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-12">
                             {% input_currency_tag 'valor_amortizacion' "Valor amortización:" placeholder="Ingrese valor amortización" required="" min="0.00" max="9999999999.99" step="0.01" %}
                         </div>
                     </div>
