--- a/EVA/templates/EVA/_common/shortcuts.html
+++ b/EVA/templates/EVA/_common/shortcuts.html
@@ -16,89 +16,104 @@
                             </span>
                         </a>
                     </li>
-                    {% if perms.TalentoHumano.can_menu_administracion %}
-                    <li>
-                        <a href="{% url 'Administracion:index' %}" class="app-list-item text-white border-0 m-0">
-                            <div class="icon-stack">
-                                <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
-                                <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
-                                <i class="fal fa-cog icon-stack-1x opacity-100 color-white"></i>
-                            </div>
-                            <span class="app-list-name">
-                                Administración
-                            </span>
-                        </a>
-                    </li>
-                    {% endif %}
-                    {% if perms.TalentoHumano.can_menu_proyectos %}
-                     <li>
-                        <a href="{% url 'Proyectos:index' %}" class="app-list-item text-white border-0 m-0">
-                            <div class="icon-stack">
-                                <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
-                                <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
-                                <i class="fal fa-building icon-stack-1x opacity-100 color-white"></i>
-                            </div>
-                            <span class="app-list-name">
-                                Proyectos
-                            </span>
-                        </a>
-                    </li>
-                    {% endif %}
-                    {% if perms.TalentoHumano.can_menu_talentohumano %}
-                    <li>
-                        <a href="{% url 'TalentoHumano:index' %}" class="app-list-item text-white border-0 m-0">
-                            <div class="icon-stack">
-                                <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
-                                <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
-                                <i class="fal fa-users icon-stack-1x opacity-100 color-white"></i>
-                            </div>
-                            <span class="app-list-name">
-                                Talento Humano
-                            </span>
-                        </a>
-                    </li>
-                    {% endif %}
-                    {% if perms.TalentoHumano.can_menu_sgi %}
-                    <li>
-                        <a href="{% url 'SGI:index' %}" class="app-list-item text-white border-0 m-0">
-                            <div class="icon-stack">
-                                <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
-                                <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
-                                <i class="fal fa-dot-circle icon-stack-1x opacity-100 color-white"></i>
-                            </div>
-                            <span class="app-list-name">
-                                SGI
-                            </span>
-                        </a>
-                    </li>
-                    {% endif %}
-                    {% if perms.TalentoHumano.can_menu_financiero %}
-                    <li>
-                        <a href="{% url 'Financiero:index' %}" class="app-list-item text-white border-0 m-0">
-                            <div class="icon-stack">
-                                <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
-                                <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
-                                <i class="fal fa-usd-square icon-stack-1x opacity-100 color-white"></i>
-                            </div>
-                            <span class="app-list-name">
-                                Financiero
-                            </span>
-                        </a>
-                    </li>
-                    {% endif %}
-                    {% if perms.TalentoHumano.can_menu_gestiondocumental %}
-                    <li>
-                        <a href="{% url 'GestionDocumental:index' %}" class="app-list-item text-white border-0 m-0">
-                            <div class="icon-stack">
-                                <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
-                                <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
-                                <i class="fal fa-archive icon-stack-1x opacity-100 color-white"></i>
-                            </div>
-                            <span class="app-list-name">
-                                Gestión<br>Documental
-                            </span>
-                        </a>
-                    </li>
+                    {% if request.session.colaborador %}
+                        {% if perms.TalentoHumano.can_menu_administracion %}
+                        <li>
+                            <a href="{% url 'Administracion:index' %}" class="app-list-item text-white border-0 m-0">
+                                <div class="icon-stack">
+                                    <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
+                                    <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
+                                    <i class="fal fa-cog icon-stack-1x opacity-100 color-white"></i>
+                                </div>
+                                <span class="app-list-name">
+                                    Administración
+                                </span>
+                            </a>
+                        </li>
+                        {% endif %}
+                        {% if perms.TalentoHumano.can_menu_proyectos %}
+                         <li>
+                            <a href="{% url 'Proyectos:index' %}" class="app-list-item text-white border-0 m-0">
+                                <div class="icon-stack">
+                                    <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
+                                    <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
+                                    <i class="fal fa-building icon-stack-1x opacity-100 color-white"></i>
+                                </div>
+                                <span class="app-list-name">
+                                    Proyectos
+                                </span>
+                            </a>
+                        </li>
+                        {% endif %}
+                        {% if perms.TalentoHumano.can_menu_talentohumano %}
+                        <li>
+                            <a href="{% url 'TalentoHumano:index' %}" class="app-list-item text-white border-0 m-0">
+                                <div class="icon-stack">
+                                    <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
+                                    <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
+                                    <i class="fal fa-users icon-stack-1x opacity-100 color-white"></i>
+                                </div>
+                                <span class="app-list-name">
+                                    Talento Humano
+                                </span>
+                            </a>
+                        </li>
+                        {% endif %}
+                        {% if perms.TalentoHumano.can_menu_sgi %}
+                        <li>
+                            <a href="{% url 'SGI:index' %}" class="app-list-item text-white border-0 m-0">
+                                <div class="icon-stack">
+                                    <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
+                                    <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
+                                    <i class="fal fa-dot-circle icon-stack-1x opacity-100 color-white"></i>
+                                </div>
+                                <span class="app-list-name">
+                                    SGI
+                                </span>
+                            </a>
+                        </li>
+                        {% endif %}
+                        {% if perms.TalentoHumano.can_menu_financiero %}
+                        <li>
+                            <a href="{% url 'Financiero:index' %}" class="app-list-item text-white border-0 m-0">
+                                <div class="icon-stack">
+                                    <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
+                                    <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
+                                    <i class="fal fa-usd-square icon-stack-1x opacity-100 color-white"></i>
+                                </div>
+                                <span class="app-list-name">
+                                    Financiero
+                                </span>
+                            </a>
+                        </li>
+                        {% endif %}
+                        {% if perms.TalentoHumano.can_menu_gestiondocumental %}
+                        <li>
+                            <a href="{% url 'GestionDocumental:index' %}" class="app-list-item text-white border-0 m-0">
+                                <div class="icon-stack">
+                                    <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
+                                    <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
+                                    <i class="fal fa-archive icon-stack-1x opacity-100 color-white"></i>
+                                </div>
+                                <span class="app-list-name">
+                                    Gestión<br>Documental
+                                </span>
+                            </a>
+                        </li>
+                        {% endif %}
+                    {% else %}
+                        <li>
+                            <a href="{% url 'Administracion:proveedor-perfil' %}" class="app-list-item text-white border-0 m-0">
+                                <div class="icon-stack">
+                                    <i class="base base-7 icon-stack-3x opacity-100 color-primary-500 "></i>
+                                    <i class="base base-7 icon-stack-2x opacity-100 color-primary-300 "></i>
+                                    <i class="fal fa-archive icon-stack-1x opacity-100 color-white"></i>
+                                </div>
+                                <span class="app-list-name">
+                                    Proveedores
+                                </span>
+                            </a>
+                        </li>
                     {% endif %}
                 </ul>
             </div>
